@@ -23,6 +23,7 @@
 #define TRANSCODING_JOB_H
 
 #include "filejob.h"
+#include "encoders.h"
 #include <QtCore/QStringList>
 #include <QtCore/QProcess>
 
@@ -30,8 +31,9 @@ class TranscodingJob : public FileJob
 {
     Q_OBJECT
 public:
-    explicit TranscodingJob(const QStringList &params);
-    ~TranscodingJob();
+    explicit TranscodingJob(const Encoders::Encoder &enc, int val, const QString &src, const QString &dest,
+                            const FsDevice::CoverOptions &c=FsDevice::CoverOptions(), int opts=0, const Song &s=Song());
+    virtual ~TranscodingJob();
 
     void stop();
 
@@ -47,10 +49,17 @@ private:
     inline qint64 computeProgress(const QString &output);
 
 private:
-    QStringList parameters;
+    const Encoders::Encoder &encoder;
+    int value;
+    QString srcFile;
+    QString destFile;
+    FsDevice::CoverOptions coverOpts;
+    int copyOpts;
+    Song song;
     QProcess *process;
     qint64 duration; //in csec
     QString data;
+    QTemporaryFile *temp;
 };
 
 
